# Agentic-Jobs-Recommender

./: .gitignore  README.md
agentic_jobs_recommender/: pyproject.toml  recommended_jobs.md
agentic_jobs_recommender/db/: chroma.sqlite3
agentic_jobs_recommender/src/ai_cv_jobs_recommender/: main.py
agentic_jobs_recommender/src/ai_cv_jobs_recommender/config/: tasks.yaml
ai_cv_jobs_recommender/: README.md  pyproject.toml  recommended_jobs.md  training_data.pkl
ai_cv_jobs_recommender/db/: chroma.sqlite3
ai_cv_jobs_recommender/src/ai_cv_jobs_recommender/: crew.py  main.py
ai_cv_jobs_recommender/src/ai_cv_jobs_recommender/config/: agents.yaml
src/: main.py
src/AgenticJobsRecommender/crews/: JobsRecommenderCrew.py
src/AgenticJobsRecommender/rag_agent/: CVRagAgent.py
src/AgenticJobsRecommender/rag_agents/: CVRagAgent.py
src/AgenticJobsRecommender/web_search_agents/: WebSearchAgent.py
