[project]
name = "ai_cv_jobs_recommender"
version = "0.1.0"
description = "ai-cv-jobs-recommender using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
ai_cv_jobs_recommender = "ai_cv_jobs_recommender.main:run"
run_crew = "ai_cv_jobs_recommender.main:run"
train = "ai_cv_jobs_recommender.main:train"
replay = "ai_cv_jobs_recommender.main:replay"
test = "ai_cv_jobs_recommender.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
